# refstack-client

./: .dockerignore  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  README.rst  refstack-client  requirements.txt  setup.cfg  setup.py  setup_env  setup_ubuntu_env.sh  tempest-additional-requirements.txt  test-requirements.txt  tox.ini
doc/: README.rst  requirements.txt
doc/source/: conf.py  index.rst
docker/: Dockerfile  env_build.sh  env_up.sh
etc/: accounts.yaml.sample  tempest.conf.sample
playbooks/: tempestconf-refstack-devstack.yaml
refstack-client/: refstack-client
refstack_client/: list_parser.py  refstack_client.py  subunit_processor.py
refstack_client/scripts/: prep_cloud.py
refstack_client/tests/smoke/: run_in_docker  test_distros.py
refstack_client/tests/unit/: refstack-client.test.conf  rsa_key  test-accounts.yaml  test-list.txt  test_client.py  test_list_parser.py
refstack_client/tests/unit/.testrepository/: 0  0.json
roles/generate-tempestconf-refstack/defaults/: main.yaml
roles/generate-tempestconf-refstack/tasks/: main.yaml
specs/: README.rst  template.rst
specs/newton/approved/: refstack-waiver.rst
specs/queens/approved/: tempest_autoconfig.rst
tests/unit/: tests.py
