[metadata]
name = refstack-client
version = 0.1
summary = Tempest test wrapper and result uploader for refstack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://refstack.openstack.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3

[files]
packages =
    refstack_client

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    refstack-client = refstack_client.refstack_client:entry_point
