[metadata]
name = refstack-client
version = 0.1
summary = Tempest test wrapper and result uploader for refstack
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://refstack.openstack.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    refstack_client

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    refstack-client = refstack_client.refstack_client:entry_point

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
